# Cpp_KT_SDC

CppLibraries/DynamicRuntime/: CMakeLists.txt  main.cpp
CppLibraries/DynaminExample/: CMakeLists.txt  main.cpp
CppLibraries/StaticExample/: CMakeLists.txt  main.cpp
CppLibraries/StringLib/: CMakeLists.txt  ExtendedStringSDKConfig.cmake
CppLibraries/external_libs/StringLib/: CMakeLists.txt
CppLibraries/external_libs/StringLib/include/: extended_string_sdk.h
CppLibraries/external_libs/StringLib/src/: extended_string_sdk.cpp
Deterministic_CoreAssignment/CoreAssign/: AssignCore  AssignCore.cpp  checkcore  checkcore.cpp  main.cpp  main2  main2.cpp  step5_external_verify.cpp  step6_query_affinity.cpp
Deterministic_CoreAssignment/MemoryPool/: MEMORY_POOL_GUIDE.md  main  main1.cpp  main2.cpp  main3.cpp  main4.cpp  step1  step2  step3  step4
Deterministic_CoreAssignment/ThreadPriority/: 01_basic_priority.cpp  02_priority_levels.cpp  README.md  basic  main  main.cpp
Deterministic_CoreAssignment/Tools/: Moniter.cpp  README_SIMPLE.md  SIMPLE_GUIDE.md  VISUAL_GUIDE.txt  moniter  simple_demo  simple_demo.cpp
Future/: AsyncDemo  AsyncDemo.cpp  PackageTask1.cpp  PackageTask2.cpp  PromiseDemo.cpp
Future/Promise/: main
Future/async/: 01_future_basics.cpp  02_future_member_functions.cpp  03_async_complete.cpp  04_promise_complete.cpp  05_combined_advanced.cpp  06_packaged_task_complete.cpp  Basic.cpp  CMakeLists.txt  COMPLETE_COMPARISON.md  INDEX.md  PACKAGED_TASK_GUIDE.md  PACKAGED_TASK_REFERENCE.cpp  QUICK_REFERENCE.cpp  README.md  SUMMARY.md  VISUAL_GUIDE.cpp  basic
IPC/IPC1/: CONCEPTS.md  README.md  build_and_run.sh  run_demo.sh
IPC/IPC1/P1/: CMakeLists.txt  main.cpp
IPC/IPC1/P2/: CMakeLists.txt  main.cpp
IPC/MessageQueue/: README.md  Reader.cpp  Writer.cpp
IPC/Pipes/: bidirectional_pipe.cpp  reader_fifo.cpp  simple_pipe.cpp  writer_fifo.cpp
IPC/Pipes/readme/: DETAILED_EXPLANATION.md  NAMED_PIPE.md  README.md  SIMPLE_ANSWERS.md
IPC/Shared_Memory/: Reader.cpp  Writer.cpp  main  main.cpp  main1  main1.cpp  reader  writer
IPC/Sockets/: TCP_vs_UDP.md
IPC/Sockets/TCP/: Client.cpp  README.md  Server.cpp  client  server
IPC/Sockets/UDP/: Client.cpp  README.md  Server.cpp
Lamda/: 01_basic_lambda.cpp  02_capture_by_value.cpp  03_capture_by_reference.cpp  05_mutable_lambda.cpp  06_lambda_with_stl.cpp  07_lambda_return_types.cpp  08_generic_lambda.cpp  09_lambda_as_parameter.cpp  10_real_world_examples.cpp
Modbus/: CMakeLists.txt  main.cpp
Modbus/include/: ModbusClient.hpp  ModbusServer.hpp
Modbus/src/: ModbusClient.cpp  ModbusServer.cpp
SOLID/: DIP_voilated.cpp  ISP_voilated.cpp  LSP_voilated.cpp  OCP_voilated.cpp  SRP_voilated.cpp
SOLID/DIP/: CMakeLists.txt  main.cpp
SOLID/DIP/include/: IDatabase.hpp  MongoDBDatabase.hpp  MySQLDatabase.hpp  UserService.hpp
SOLID/DIP/src/: MongoDBDatabase.cpp  MySQLDatabase.cpp  UserService.cpp
SOLID/ISP/: CMakeLists.txt  main.cpp
SOLID/ISP/include/: Airplane.hpp  Bicycle.hpp  Boat.hpp  IDriveable.hpp  IFlyable.hpp  ISailable.hpp
SOLID/ISP/src/: Airplane.cpp  Bicycle.cpp  Boat.cpp
SOLID/LSP/: CMakeLists.txt  main.cpp
SOLID/LSP/include/: Rectangle.hpp  Shape.hpp  Square.hpp
SOLID/LSP/src/: Rectangle.cpp  Square.cpp
SOLID/OCP/: CMakeLists.txt  main.cpp
SOLID/OCP/include/: AreaCalculator.hpp  Circle.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
SOLID/OCP/src/: AreaCalculator.cpp  Cricle.cpp  Rectangle.cpp  Shape.cpp  Trianlge.cpp
SOLID/SRP/: CMakeLists.txt  main.cpp
SOLID/SRP/include/: CartRepository.hpp  InvoicePrinter.hpp  Product.hpp  ShoppingCart.hpp
SOLID/SRP/src/: CartRepository.cpp  InvoicePrinter.cpp  Product.cpp  ShoppingCart.cpp
SignalHandle/: main  main.cpp  main2  main2.cpp
Task_1/: CMakeLists.txt  main.cpp
Task_1/ReadMe/: QUICKREF.md  README.md  STRUCTURE.md  SUMMARY.md
Task_1/include/: Consumer.h  Message.h  Producer.h  Topic.h  Utils.h
Task_1/src/: Consumer.cpp  Message.cpp  Producer.cpp  Topic.cpp  Utils.cpp
Task_2/: CMakeLists.txt  server_main.cpp  user_main.cpp
Task_2/Readme/: COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  VERIFICATION_REPORT.md  VISUAL_ARCHITECTURE.md
Task_2/include/: ChatClient.h  ChatServer.h  Message.h  Room.h  Utils.h
Task_2/src/: ChatClient.cpp  ChatServer.cpp  Message.cpp  Room.cpp  Utils.cpp
Task_Scheduling/Callback/: 01_basic_callback.cpp  02_callback_with_params.cpp  03_callback_return_value.cpp  04_callback_with_lambda.cpp  05_register_callbacks.cpp
Task_Scheduling/FuntionPointer/: Fp  FunctionPointer.cpp  main1.cpp  main2.cpp  summary.cpp
Task_Scheduling/Lamda/: main  main.cpp
Task_Scheduling/SchedulerDemo/examples/: delayed_task_demo.cpp  thread_pool_demo.cpp
Task_Scheduling/SchedulerDemo/include/: ThreadPool.hpp
Task_Scheduling/SchedulerDemo/src/: delayed_task.cpp
Threads/DeadLock/: Deadlock.cpp  Solution1_LockOrdering.cpp  Solution2_StdLock.cpp  Solution3_ScopedLock.cpp  Solution4_TryLock.cpp  sol1  sol2  sol3  sol4
Threads/Fork/: main  main.cpp  main1  main1.cpp  main2  main2.cpp  main3.cpp
Threads/Semaphore/: BinarySemaphore.cpp  CountingSemaphore.cpp  binary  count
Threads/ThreadPool/: ThreadPool.cpp  pool
Threads/concurrency/: ConditionVariable.cpp  ConditionVariable_improved.cpp  cv  fork  fork.cpp  thread.cpp  thread1  thread2  thread2.cpp  thread3  thread3.cpp  thread4  thread4.cpp  thread6  thread6.cpp  thread7  thread7.cpp  try_lock  try_lock.cpp
Threads/sample/: MultiThread1.cpp  Mutex1.cpp  t1  t2
